[gd_scene load_steps=5 format=3 uid="uid://ddbt0g3vrtc4d"]

[ext_resource type="Theme" uid="uid://dfcxy7bgfkdlq" path="res://assets/UI_theme.tres" id="1_idqfy"]
[ext_resource type="Script" path="res://ScoreScreen.gd" id="1_iu1hh"]
[ext_resource type="Material" uid="uid://bp5bw6sa3t6mx" path="res://assets/blur_shader.tres" id="2_63hpa"]
[ext_resource type="FontFile" uid="uid://m7cgagl8p45" path="res://assets/using_fonts_monospace_bitmap_font_example.webp" id="4_tyu1f"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_idqfy")
script = ExtResource("1_iu1hh")

[node name="blur" type="ColorRect" parent="."]
material = ExtResource("2_63hpa")
layout_mode = 0
offset_right = 384.0
offset_bottom = 256.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 256.0

[node name="ScoreMenu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="title" type="Label" parent="CenterContainer/ScoreMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_tyu1f")
theme_override_font_sizes/font_size = 32

[node name="score" type="Label" parent="CenterContainer/ScoreMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_tyu1f")
theme_override_font_sizes/font_size = 16

[node name="quit to menu" type="Button" parent="CenterContainer/ScoreMenu"]
layout_mode = 2
text = "Quit to Menu"

[connection signal="mouse_entered" from="CenterContainer/ScoreMenu/quit to menu" to="." method="_on_quit_to_menu_mouse_entered"]
[connection signal="pressed" from="CenterContainer/ScoreMenu/quit to menu" to="." method="_on_quit_to_menu_pressed"]
